--- a/BeastList/app/src/main/res/values/strings.xml
+++ b/BeastList/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Beast List</string>
     <string name="beast_objective_hint">What do you want to beast?</string>
+    <string name="beast_objective_label">Objective</string>
+    <string name="beast_details_label">Details</string>
+    <string name="beasted_label">Beasted</string>
 </resources>
